<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SWJournal</string>
    <string name="action_settings">Settings</string>
    <!-- Strings for the buttons in main menu -->
    <string name="main_menu_btn_start">Start workout</string>
    <string name="main_menu_btn_exercises">Exercises</string>
    <string name="main_menu_btn_presets">Presets</string>
    <string name="main_menu_btn_body">Body tracking</string>
    <string name="main_menu_btn_reports">Reports</string>
    <string name="main_menu_btn_settings">Settings</string>
    <string name="main_menu_actionBar_text">SWJ: main</string>
    <string name="workout_exercise_no_note_hint">No exercise selected</string>
    <string name="workout_set_no_note_hint">No set selected</string>
    <string name="workout_exercise_newnote_hint">Tap to add note for current exercise</string>
    <string name="workout_set_newnote_hint">Tap to add note for current set</string>
    <string name="workout_exercise_textview_hint">Add new exercise</string>
    <string name="workout_cancel_btn_hint">cancel editing</string>
    <string name="workout_add_btn_hint">add to list</string>
    <string name="workout_edit_reps_hint">Reps</string>
    <string name="workout_edit_weight_hint">Weight</string>
    <string name="title_activity_swj_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete_log_entries">Delete log entries</string>
    <string name="note_mark">note mark</string>
    <string name="sets_chosen">Sets chosen:\u0020</string>
    <string name="exercises_chosen">Ex. chosen:\u0020</string>
    <string name="db_copied_to">DB copied to </string>
    <string name="delete_everything_related_to_ex">Delete everything related to this exercise?</string>
    <string name="empty_not_allowed">Empty fields are not allowed</string>
    <string name="journal">Journal</string>
    <string name="restore_backup">Restore backup</string>
    <string name="create_backup">Create backup</string>
    <string name="contact_developer">Contact developer</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_all_details">Erase all training data on exit from settings</string>
    <string name="data_management">Data management</string>
    <string name="backup">Backup</string>
    <string name="in_path">"In "</string>
    <string name="from_path">"From "</string>
    <string name="for_reports">For bug reports or recommendations</string>
    <string name="send_message">Send message</string>
    <string name="backup_create_failed_toast">Failed to create backup</string>
    <string name="backup_restore_failed_toast">Failed to restore backup</string>
    <string name="press_again_to_add">Press again to confirm since exercise in the past</string>
    <string name="notes">Notes</string>
    <string name="edit">Edit</string>
    <string name="delete_ex">Delete exercise</string>
    <string name="report_config">Report configuration</string>
    <string name="one_month">1 month</string>
    <string name="three_months">3 months</string>
    <string name="six_months">6 months</string>
    <string name="one_year">1 year</string>
    <string name="one_month_period_report">1 month report</string>
    <string name="three_months_period_report">3 months report</string>
    <string name="six_months_period_report">6 months report</string>
    <string name="one_year_period_report">1 year report</string>
    <string name="two_year_period_report">2 year report</string>
    <string name="stats_tab">Stats</string>
    <string name="graph_tab">Graph</string>
    <string name="reps_tab">Repeats</string>
    <string name="banner_ad_unit_id">ca-app-pub-5724830746715959/4196797025</string>
    <string name="title_activity_exercise_report">Exercise report</string>
    <string name="hello_world">Hello world!</string>
    <string name="period">Period</string>
    <string name="show_weights">Show weights</string>
    <string name="weight_per_date">Weight per date</string>
    <string name="show_reps">Show reps</string>
    <string name="reps_per_date">Rep per date</string>
    <string name="exercise">Exercise</string>
    <string name="generate">Generate</string>
    <string name="need_include_reps_or_weights">Report should include reps or/and weights</string>
    <string name="weights">Weights</string>
    <string name="reps">Reps</string>
    <string name="copy">Copy</string>
    <string name="no_ex_selected">No exercise selected</string>
    <string name="not_enough_data">Not enough data</string>
    <string name="press_again_to_confirm">Tap again to confirm</string>
</resources>
