<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/report_conf_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/report_conf_two_panes">

        <LinearLayout
            android:id="@+id/report_conf_left_side"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_height="48dp"
                android:textSize="20sp"
                android:text="@string/exercise"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:clickable="false"
                android:background="#dddddd" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_height="48dp"
                android:textSize="20sp"
                android:text="@string/period"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:clickable="false"
                android:background="#dddddd" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_height="48dp"
                android:textSize="20sp"
                android:text="@string/show_weights"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <View
                android:layout_width="match_parent"
                android:background="#dddddd"
                android:layout_height="1dp"
                android:clickable="false"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_height="48dp"
                android:textSize="20sp"
                android:text="@string/weight_per_date"
                android:enabled="false"
                android:focusable="false"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <View
                android:layout_width="match_parent"
                android:background="#dddddd"
                android:layout_height="1dp"
                android:clickable="false"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_height="48dp"
                android:textSize="20sp"
                android:text="@string/show_reps"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <View
                android:layout_width="match_parent"
                android:background="#dddddd"
                android:layout_height="1dp"
                android:clickable="false"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_height="48dp"
                android:textSize="20sp"
                android:text="@string/reps_per_date"
                android:enabled="false"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/report_conf_right_side"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="right">

            <Spinner
                android:id="@+id/exerciseChooser"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:clickable="false"
                android:background="#dddddd" />

            <Spinner
                android:id="@+id/periodChooser"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />

            <View
                android:layout_width="match_parent"
                android:background="#dddddd"
                android:layout_height="1dp"
                android:clickable="false"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:scaleX="1.5"
                android:scaleY="1.5"/>

            <View
                android:layout_width="match_parent"
                android:background="#dddddd"
                android:layout_height="1dp"
                android:clickable="false"
                />

            <Spinner
                android:id="@+id/weightPointChooser"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="false"
                android:focusable="false" />

            <View
                android:layout_width="match_parent"
                android:background="#dddddd"
                android:layout_height="1dp"
                android:clickable="false"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_height="48dp"
                android:layout_marginBottom="10dp"
                android:scaleX="1.5"
                android:scaleY="1.5"/>

            <View
                android:layout_width="match_parent"
                android:background="#dddddd"
                android:layout_height="1dp"
                android:clickable="false"
                />

            <Spinner
                android:id="@+id/repsPointChooser"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp" />



        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/note_dialog_OK"
            style="@style/actionBarButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="noteButtonClick"
            android:textColor="@android:color/white"
            android:text="@string/save" />

        <Button
            style="@style/actionBarButton"
            android:id="@+id/note_dialog_CANCEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="noteButtonClick"
            android:textColor="@android:color/white"
            android:text="@string/cancel" />

    </LinearLayout>

</RelativeLayout>